# cpp_geometry

./: .gitignore  CMakeLists.txt  conan.txt  conanfile.txt  deps.txt
source/: Color.cpp  Color.hpp  ComplexNumber.hpp  GmMath.hpp  Math.hpp
source/2D/: Path.cpp  Path.hpp  Point.cpp  Point.hpp  Rect.cpp  Rect.hpp  Size.cpp  Size.hpp
source/2D/Primitives/: Point.cpp  Point.hpp  Rect.cpp  Rect.hpp  Size.cpp  Size.hpp
source/3D/: Box.cpp  Box.hpp  LineSegment.cpp  LineSegment.hpp  Matrix4.cpp  Matrix4.hpp  Ray.cpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp  Vertex.hpp
source/3D/kinematics/: BaseBone.hpp  Bone.cpp  Bone.hpp  BoneData.cpp  BoneData.hpp  Skeleton.cpp  Skeleton.hpp
source/3D/vertices/: ColoredVertex.cpp  ColoredVertex.hpp  TexturedVertex.cpp  TexturedVertex.hpp  Vertex.cpp  Vertex.hpp
source/DSP/: DSP.cpp  DSP.hpp  DSPTools.cpp  DSPTools.hpp
source/geometry/: CMakeLists.txt  Color.cpp  Color.hpp  Geometry.hpp  GmMapping.hpp  GmMath.hpp
source/geometry/2D/: Path.hpp  PointsPath.cpp  PointsPath.hpp
source/geometry/2D/Primitives/: Point.cpp  Point.hpp  Rect.cpp  Rect.hpp  Size.cpp  Size.hpp
source/geometry/3D/: Box.cpp  Box.hpp  LineSegment.cpp  LineSegment.hpp  Matrix4.cpp  Matrix4.hpp  Ray.cpp  Ray.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp  Vertex.cpp  Vertex.hpp
source/geometry/3D/kinematics/: Bone.hpp  DirectionBone.cpp  DirectionBone.hpp  FabrikKinematics.cpp  FabrikKinematics.hpp  Skeleton.cpp  Skeleton.hpp
source/geometry/DSP/: DSPTools.hpp
source/geometry_test/: CMakeLists.txt  main.cpp
(+5 files in other folders)
